--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+			<tr>
+				<th>roll nuumber</th>
+				<th>name</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>307</td>
+				<td>prakash</td>
+			</tr>
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
