--- a/main.html
+++ b/main.html
@@ -20,6 +20,10 @@
 				<td>307</td>
 				<td>prakash</td>
 			</tr>
+			<tr>
+				<td>308</td>
+				<td>sathish</td>
+			</tr>
 		</tbody>
 	</table>
     <script type="text/javascript" src="./script.js">
